<resources>
    <string name="app_name">MENTOMEET</string>
    <string name="mentomeet">mentomeet</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="mentor">Mentor</string>
    <string name="student">Student</string>
    <string name="university">University</string>
    <string name="chat">Chat</string>
    <string name="mail">Mail</string>
    <string name="accomplishments">Accomplishments</string>
    <string name="start_communication_between_mentor_student_and_parents">START COMMUNICATION BETWEEN MENTOR , STUDENT AND PARENTS</string>
    <string name="password">Student Mobile No</string>
    <string name="password7">Parents Mobile No</string>
    <string name="password1">Student Name</string>
    <string name="password2">Mother Name</string>
    <string name="password3">Mentor Name</string>
    <string name="password4">Father Name</string>
    <string name="password5">Parents Email Id</string>
    <string name="password6">Student Email Id</string>
    <string name="login">Save Details</string>
    <string name="update">Update Details</string>
    <string name="Delete">Delete Details?</string>
    <string name="StudentId">Student Id?</string>
    <string name="RoomName">Room Name</string>
    <string name="join">join</string>
    <string name="RollNo">RollNo</string>
    <string name="send">send</string>
    <string name="enter_your_details_below">Enter your details below</string>

</resources>