<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentSection">



    <View
        android:id="@+id/belowTop"
        android:layout_width="0dp"
        android:layout_height="70dp"
        tools:ignore="MissingConstraints"
        android:background="@drawable/wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />



    <TextView
        android:id="@+id/topText1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="0dp"
        android:text="Enter your details below"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:gravity="center|top"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/belowTop"
        app:layout_constraintTop_toTopOf="parent" />




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/belowTop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/e1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="22dp"
                android:background="@drawable/round_border"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/password1"
                android:inputType="text"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>


            <EditText
                android:id="@+id/e2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="22dp"
                android:background="@drawable/round_border"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/password3"
                android:inputType="text"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/e1" />
            <EditText
                android:id="@+id/e3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="22dp"
                android:background="@drawable/round_border"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/password4"
                android:inputType="text"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/e2" />
            <EditText
                android:id="@+id/e4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="22dp"
                android:background="@drawable/round_border"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/password2"
                android:inputType="text"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/e3" />

            <EditText
                android:id="@+id/e5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="22dp"
                android:background="@drawable/round_border"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="phone"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/e4" />


            <EditText
                android:id="@+id/e6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="22dp"
                android:background="@drawable/round_border"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/password6"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/e5" />


            <EditText
                android:id="@+id/e7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="22dp"
                android:background="@drawable/round_border"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/password7"
                android:inputType="phone"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/e6" />

            <EditText
                android:id="@+id/e8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="22dp"
                android:background="@drawable/round_border"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/password5"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/e7" />

            <EditText
                android:id="@+id/e10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="22dp"
                android:background="@drawable/round_border"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/RollNo"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/e8" />

            <Button
                android:id="@+id/e9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/btnshape"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>




        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>