<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/w1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Update Content Panel"
        android:background="@color/c12"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/c5"
        tools:ignore="MissingConstraints" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/w1"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/w"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="22dp"
                android:background="@drawable/round_border"
                android:drawablePadding="16dp"
                android:textColor="@color/c13"
                android:ems="10"
                android:hint="@string/RollNo"
                android:inputType="text"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/w2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/c13"
                android:layout_marginEnd="22dp"
                android:background="@drawable/round_border"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/password3"
                android:inputType="text"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/w3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="22dp"
                android:background="@drawable/round_border"
                android:drawablePadding="16dp"
                android:textColor="@color/c13"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="text"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/w5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="22dp"
                android:textColor="@color/c13"
                android:background="@drawable/round_border"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/password6"
                android:inputType="text"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/w6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="22dp"
                android:textColor="@color/c13"
                android:background="@drawable/round_border"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/password7"
                android:inputType="text"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/w7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="22dp"
                android:textColor="@color/c13"
                android:background="@drawable/round_border"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/password5"
                android:inputType="text"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />


            <Button
                android:id="@+id/W8"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/btnshape"
                android:text="@string/update"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />


        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>